unpackaged/main/default/objects/OrderApi__Price_Rule__c/OrderApi__Price_Rule__c.object-meta.xml
<CustomObject>
    <description>Flexible price rules allow you to configure custom price scenarios for items based on a variety of different rules.</description>
    <label>Price Rule</label>
    <nameField>
        <label>Price Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>