unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/EventApi__Is_On_Site_Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_On_Site_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, denotes this price rule as the on site price.</description>
    <inlineHelpText>When checked, denotes this price rule as the on site price.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>