unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/EventApi__Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Schedule Item.</description>
    <inlineHelpText>Link to related Schedule Item.</inlineHelpText>
    <label>Schedule Item</label>
    <referenceTo>EventApi__Schedule_Item__c</referenceTo>
    <relationshipLabel>Price Rules</relationshipLabel>
    <relationshipName>Price_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>