unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/EventApi__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Ticket Type.</description>
    <inlineHelpText>Link to related Ticket Type.</inlineHelpText>
    <label>Ticket Type</label>
    <referenceTo>EventApi__Ticket_Type__c</referenceTo>
    <relationshipLabel>Price Rules</relationshipLabel>
    <relationshipName>Price_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>