unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Additional_Currencies_JSON__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Additional_Currencies_JSON__c</fullName>
    <description>Value stored for the additional currency price rules.</description>
    <inlineHelpText>Value stored for the additional currency price rules.</inlineHelpText>
    <label>Additional Currencies JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>