unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Current_Num_Available__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Current_Num_Available__c</fullName>
    <description>A running total of the number of times this rule can be used prior to the rule expiring (if applicable).</description>
    <formula>IF(OrderApi__Max_Num_Available__c &gt; 0 &amp;&amp; (OrderApi__Max_Num_Available__c - OrderApi__Num_Times_Used__c &gt;= 0), OrderApi__Max_Num_Available__c - OrderApi__Num_Times_Used__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A running total of the number of times this rule can be used prior to the rule expiring (if applicable).</inlineHelpText>
    <label>Current Num Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>