unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__End_Date__c</fullName>
    <description>If a pricing rule is date-driven what date does this rule expire and become an inactive price for the product?</description>
    <inlineHelpText>If a pricing rule is date-driven what date does this rule expire and become an inactive price for the product?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>