unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked the Price Rule is considered available for assignment and is considered when auto-calculating the appropriate price for a Item on Invoices, Sales Orders, Receipts, and EPayments. Defaults checked.</description>
    <inlineHelpText>When checked the Price Rule is considered available for assignment and is considered when auto-calculating the appropriate price for a Item on Invoices, Sales Orders, Receipts, and EPayments. Defaults checked.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>