unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All products must have one and only one default price assigned. This is used as the catch all when calculating the appropriate price to charge customers when purchasing the product.</description>
    <inlineHelpText>All products must have one and only one default price assigned. This is used as the catch all when calculating the appropriate price to charge customers when purchasing the product.</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>