unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Is_Promotional_Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Promotional_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this field this price will be shown in the eStore as the promotional price with the price rule name.</description>
    <inlineHelpText>By checking this field this price will be shown in the eStore as the promotional price with the price rule name.</inlineHelpText>
    <label>Is Promotional Price</label>
    <type>Checkbox</type>
</CustomField>