unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The item the price rule record is assigning a price for.</description>
    <inlineHelpText>The item the price rule record is assigning a price for.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Pricing Rules</relationshipLabel>
    <relationshipName>Price_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>