unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Item Class -- only valid if the Price Rule is not linked to a Item. When linked to a Item Class the Price Rule will automatically be created for all Items created as a child of the Item Class.</description>
    <inlineHelpText>Link to the Item Class -- only valid if the Price Rule is not linked to a Item. When linked to a Item Class the Price Rule will automatically be created for all Items created as a child of the Item Class.</inlineHelpText>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Default Price Rules</relationshipLabel>
    <relationshipName>Price_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>