unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Limit_Per_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Limit_Per_Account__c</fullName>
    <description>Limits the total number of times the price rule can be used by the account or any contacts on the account.</description>
    <inlineHelpText>Limits the total number of times the price rule can be used by the account or any contacts on the account.</inlineHelpText>
    <label>Limit Per Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>