unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Limit_Per_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Limit_Per_Contact__c</fullName>
    <description>Limits the number of times the price rule can be used by each contact.</description>
    <inlineHelpText>Limits the number of times the price rule can be used by each contact.</inlineHelpText>
    <label>Limit Per Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>