unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Max_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Max_Assignments__c</fullName>
    <description>Enter the maximum quantity that can be assigned for this rule to apply to a purchase of the item. Leave blank to not constrain rule by maximum assignments.</description>
    <inlineHelpText>Enter the maximum quantity that can be assigned for this rule to apply to a purchase of the item. Leave blank to not constrain rule by maximum assignments.</inlineHelpText>
    <label>Max Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>