unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Max_Quantity__c</fullName>
    <description>Enter the maximum quantity that can not be exceeded for this rule to apply to be valid for any given transaction scenario. Leave blank to disable max quantity as a constraint for the rule.</description>
    <inlineHelpText>Enter the maximum quantity that can not be exceeded for this rule to apply to be valid for any given transaction scenario. Leave blank to disable max quantity as a constraint for the rule.</inlineHelpText>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>