unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Min_Assignments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Min_Assignments__c</fullName>
    <description>Enter the minimum quantity that must be assigned for this rule to apply to a purchase of the item. Leave blank to not constrain rule by minimum assignments.</description>
    <inlineHelpText>Enter the minimum quantity that must be assigned for this rule to apply to a purchase of the item. Leave blank to not constrain rule by minimum assignments.</inlineHelpText>
    <label>Min Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>