unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Min_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Min_Quantity__c</fullName>
    <description>Enter the minimum quantity that must be purchased for this rule to apply to a purchase of the item. Leave blank to not constrain rule assignement by minimum quantity.</description>
    <inlineHelpText>Enter the minimum quantity that must be purchased for this rule to apply to a purchase of the item. Leave blank to not constrain rule assignement by minimum quantity.</inlineHelpText>
    <label>Min Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>