unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Num_Times_Used__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Num_Times_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times this rule has been applied as the price rule for the product on a transaction.</description>
    <inlineHelpText>The number of times this rule has been applied as the price rule for the product on a transaction.</inlineHelpText>
    <label>Num Times Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>