unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price__c</fullName>
    <description>Enter the price for the pricing rule.</description>
    <inlineHelpText>Enter the price for the pricing rule.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>