unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Start_Date__c</fullName>
    <description>If a pricing rule is date-driven what date does this rule become an active/available price for the item?</description>
    <inlineHelpText>If a pricing rule is date-driven what date does this rule become an active/available price for the item?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>