unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/OrderApi__Tax_Inclusive_Price__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Tax_Inclusive_Price__c</fullName>
    <description>SYSTEM * The value in this field defines the price when Show Tax Inclusive Pricing is marked true on the store.</description>
    <inlineHelpText>SYSTEM * The value in this field defines the price when Show Tax Inclusive Pricing is marked true on the store.</inlineHelpText>
    <label>Tax Inclusive Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>