unpackaged/main/default/objects/OrderApi__Price_Rule__c/fields/PriceApi__Bulk_Price_Rule__c.field-meta.xml
<CustomField>
    <fullName>PriceApi__Bulk_Price_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the price rule to the Price Rules Manager.</description>
    <inlineHelpText>Relates the price rule to the Price Rules Manager.</inlineHelpText>
    <label>Price Rules Manager</label>
    <referenceTo>PriceApi__Bulk_Price_Rule__c</referenceTo>
    <relationshipLabel>Price Rules</relationshipLabel>
    <relationshipName>Price_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>