unpackaged/main/default/objects/OrderApi__Price_Rule__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>